--- a/react-client-application/src/index.css
+++ b/react-client-application/src/index.css
@@ -22,7 +22,12 @@ a:hover {
   color: #535bf2;
 }
 
+h1 {
+  color: rgb(90, 132, 90);
+}
+
 body {
+  background-color: #747bff;
   margin: 0;
   display: flex;
   place-items: center;
