--- a/react-client-application/src/components/pages/loginPage/style.module.css
+++ b/react-client-application/src/components/pages/loginPage/style.module.css
@@ -7,7 +7,7 @@
   margin: 0;
   font-family: "Roboto", sans-serif;
 }
-.registerContainer {
+.loginContainer {
   background: white;
   padding: 20px;
   border-radius: 8px;
@@ -17,6 +17,6 @@
   text-align: center;
 }
 
-.registerContainer > div {
+.loginContainer > div {
   margin: 10px;
 }
