--- a/react-client-application/src/components/header/style.module.css
+++ b/react-client-application/src/components/header/style.module.css
@@ -1,9 +1,6 @@
-.marginNavs > a {
+.marginNavs button a {
   margin: 20px;
   font-size: 20px;
-}
-
-.marginNavs {
-  text-align: center;
-  background-color: aqua;
+  color: white !important;
+  text-decoration: none !important;
 }
